--- a/templates/prestamos/index.html
+++ b/templates/prestamos/index.html
@@ -38,7 +38,7 @@
             <tr>
                 <td>{{ p.id_prestamo }}</td>
                 <td>{{ (usuarios | selectattr("id", "equalto", p.id_usuario) | first).nombre }}</td>
-                <td>{{ (usuarios | selectattr("id", "equalto", p.id_bibliotecario) | first).nombre }}</td>
+                <td>{{ p.bibliotecario.usuario.nombre }}</td>
                 <td>{{ (materiales | selectattr("id_material", "equalto", p.id_material) | first).titulo if (materiales | selectattr("id_material", "equalto", p.id_material) | first) else "No encontrado" }}</td>
                 <td>{{ p.fecha_prestamo }}</td>
                 <td>{{ p.fecha_devolucion }}</td>
